# intelligent-essay-evaluation-system

./: .env  .env.example  .gitignore  PROJECT_SUMMARY.md  README.md  deep_fix_oxygent.py  main.py  pyproject.toml  reports_server.py  requirements.txt  start_system.py  启动系统.bat  启动说明.md
.qoder/rules/: agent_stack.md  proxy.md  runcmd.md
doc/: AI 教学创新项目讨论纪要.md  API文档.md  基于OxyGent与langextract的智能作文评价系统设计方案.md  部署指南.md
examples/: basic_usage.py
langextract_schemas/: schema_templates.py
oxy_agents/: __init__.py  guide.py  instructional_designer.py  llm_config.py  master_agent.py  praiser.py  reporter.py  text_analyst.py
prompts/: analyst_prompts.py  designer_prompts.py  guide_prompts.py  praiser_prompts.py  reporter_prompts.py
tests/: integration_test.py  test_multi_agent_workflow.py
tests/test_agents/: test_units.py
utils/: message_validator.py  monitoring_system.py  oxygent_error_handler.py  performance.py  resource_optimizer.py  state_cache_manager.py  workflow_manager.py
